# logika_libs

./: .gitignore  CMakeLists.txt  Makefile.linux  TODO.md  annotated.html  annotated_dup.js  classes.html  common.cmake  dir_000001_000000.html  dir_000001_000004.html  dir_000001_000014.html  dir_000002_000041.html  dir_000003_000002.html  dir_000003_000004.html  dir_000003_000014.html  dir_000003_000043.html  dir_000004_000017.html  dir_000007_000017.html  dir_000009_000004.html  dir_000009_000014.html  dir_000009_000042.html  dir_000010_000000.html  dir_000010_000022.html  dir_000011_000002.html  dir_000011_000004.html  dir_000011_000014.html  dir_000017_000004.html  dir_000018_000004.html  dir_000022_000004.html  dir_000023_000004.html  dir_000023_000014.html  dir_000023_000017.html  dir_000024_000004.html  dir_000025_000014.html  dir_000026_000000.html  dir_000026_000002.html  dir_000026_000004.html  dir_000026_000008.html  dir_000026_000022.html  dir_000026_000028.html  (+353 more)
logika/: CMakeLists.txt  Makefile
logika/cmake/: common.cmake  connections.cmake  connections_common.cmake  connections_network.cmake  connections_serial.cmake  logger.cmake  meters.cmake  meters4.cmake  meters4l.cmake  meters4m.cmake  meters6.cmake  meters_common.cmake  protocols.cmake  resource_converters.cmake
logika/include/connections/: connection.h  iconnection.h  types.h
logika/include/logika/common/: any.hpp  any.ipp  defs.h  iserializable.h  misc.h  rc.h  shared_constructible.hpp  types.h
logika/include/logika/connections/: connection.h  defs.h  iconnection.h  rc.h  types.h
logika/include/logika/connections/common/: linux_io.h  windows_socket_io.h
logika/include/logika/connections/network/: defs.h  net_connection.h  tcp_connection.h  udp_connection.h
logika/include/logika/connections/serial/: defs.h  (+3 more)
logika/include/logika/log/: defines.h  defs.h  logger.h  types.h
logika/include/logika/meters/: archive.h  archive_def.h  archive_field.h  archive_field_def.h  channel.h  data_table.h  data_table.hpp  data_table.ipp  data_tag.h  data_tag.ipp  data_tag_def.h  defs.h  imeter.h  interval_archive.h  item_def_base.h  meter.h  resources.h  service_archive.h  tag.h  tag_def.h  types.h
logika/include/logika/protocols/: comm_exception.h  defs.h  iprotocol.h  protocol.h  rc.h
logika/include/logika/resmanager/: iconverter.h  istorage.h
logika/include/logika/storage/: storage.hpp  storage.ipp
logika/src/: main.cpp
logika/src/common/: any.cpp  misc.cpp
logika/src/connections/: connection.cpp
logika/src/connections/common/: linux_io.cpp  windows_socket_io.cpp
logika/src/connections/network/: net_connection.cpp  tcp_connection.cpp  tcp_connection_linux.cpp  tcp_connection_windows.cpp  udp_connection.cpp  udp_connection_linux.cpp  udp_connection_windows.cpp
logika/src/connections/serial/: serial_connection.cpp  serial_port_connection.cpp  serial_port_connection_linux.cpp  serial_port_connection_windows.cpp
logika/src/connections/utils/: types_converter.cpp
logika/src/log/: logger.cpp
logika/src/meters/: archive.cpp  archive_def.cpp  archive_field.cpp  archive_field_def.cpp  archive_types.cpp  channel.cpp  data_table.cpp  data_tag.cpp  data_tag_def.cpp  interval_archive.cpp  item_def_base.cpp  meter.cpp  service_archive.cpp  tag.cpp  tag_def.cpp  types.cpp
logika/src/meters/converters/: archive_type_converter.cpp  channel_converter.cpp  device_converter.cpp  l4_archive_converter.cpp  l4_archive_field_converter.cpp  l4_tag_converter.cpp  m4_archive_converter.cpp  m4_archive_field_converter.cpp  m4_tag_converter.cpp  meter_converters.cpp
logika/src/meters/logika4/: archive_field_def4.cpp  logika4.cpp  tag_def4.cpp
logika/src/meters/logika6/: archive_def6.cpp  archive_field_def6.cpp  data_tag6.cpp  data_tag_def6.cpp  tag_def6.cpp
logika/src/meters/utils/: types_converter.cpp
logika/src/protocols/: comm_exception.cpp  protocol.cpp
logika/src/protocols/m4/: archive4m.cpp  archive_record.cpp  flash_archive4l.cpp  flash_ring_buffer.cpp  m4protocol.cpp  m4protocol_api.cpp  m4protocol_impl.cpp  packet.cpp
logika/src/protocols/x6/: spbusprotocol.cpp
migration/: .gitignore  CMakeLists.txt  generate.sh  main.cpp
migration/converters/: archive_types.hpp  buses.hpp  channels.hpp  data_types.hpp  devices.hpp  l4_archive_fields.hpp  l4_archives.hpp  l4_tags.hpp  l4_types.hpp  m4_archive_fields.hpp  m4_archives.hpp  m4_tags.hpp  tag_kinds.hpp  vars.hpp  x6_archive_fields.hpp  x6_archives.hpp  x6_tag_types.hpp  x6_tags.hpp
migration/include/converters/: archive_types.h  buses.h  channels.h  data_types.h  devices.h  l4_archive_fields.h  l4_archives.h  l4_tags.h  l4_types.h  m4_archive_fields.h  m4_archives.h  m4_tags.h  tag_kinds.h  vars.h  x6_archive_fields.h  x6_archives.h  x6_tag_types.h  x6_tags.h
migration/include/utils/: enums_string_to_pb.h
migration/proto/: buses.proto  data_types.proto  devices.proto  l4_archives.proto  l4_tags.proto  m4_archive_fields.proto  m4_archives.proto  m4_tags.proto  tag_kinds.proto  x6_archive_fields.proto  x6_archives.proto  x6_tag_types.proto  x6_tags.proto
migration/src/: main.cpp
migration/src/converters/: archive_types.cpp  buses.cpp  channels.cpp  data_types.cpp  devices.cpp  l4_archive_fields.cpp  l4_archives.cpp  l4_tags.cpp  l4_types.cpp  m4_archive_fields.cpp  m4_archives.cpp  m4_tags.cpp  tag_kinds.cpp  vars.cpp  x6_archive_fields.cpp  x6_archives.cpp  x6_tag_types.cpp  x6_tags.cpp
migration/src/utils/: enums_string_to_pb.cpp
migration/utils/: enums_string_to_pb.hpp
resources/: .gitignore  CMakeLists.txt
resources/include/logika/resources/: loader.hpp  loader.ipp
resources/logika/resources/: archive_types.proto  buses.proto  channels.proto  data_types.proto  devices.proto  enums.proto  l4_archive_fields.proto  l4_archives.proto  l4_tags.proto  l4_types.proto  m4_archive_fields.proto  m4_archives.proto  m4_tags.proto  tag_kinds.proto  vars.proto  x6_archive_fields.proto  x6_archives.proto  x6_tag_types.proto  x6_tags.proto
resources/templates/: archive_types.proto  l4_archive_fields.proto  l4_types.proto  vars.proto
(+3594 files in other folders)
